Test beater component, tempo is broken/sticky.

--- a/pages/tests.html
+++ b/pages/tests.html
@@ -1,2 +1,6 @@
-<script async src="../dist/src/pauser/test_pauser_in_page.js" type="module"></script>
-<script async src="../dist/src/clock/test_pauser_with_clock.js" type="module"></script>
+<head>
+  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <script async src="../dist/src/pauser/test_pauser_in_page.js" type="module"></script>
+  <script async src="../dist/src/clock/test_pauser_with_clock.js" type="module"></script>
+  <script async src="../dist/src/beater/test_beater_in_page.js" type="module"></script>
+</head>
