--- a/pages/tests.html
+++ b/pages/tests.html
@@ -3,4 +3,5 @@
   <script async src="../dist/src/pauser/test_pauser_in_page.js" type="module"></script>
   <script async src="../dist/src/clock/test_pauser_with_clock.js" type="module"></script>
   <script async src="../dist/src/beater/test_beater_in_page.js" type="module"></script>
+  <script async src="../dist/src/instruments/drums/test_kick.js" type="module"></script>
 </head>
